--- a/templates/optionSelect.html
+++ b/templates/optionSelect.html
@@ -1,1 +1,45 @@
-#okay 
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+.button {
+    background-color: #EBEBEB; /* Peach-ish */
+    border: none;
+    color: white;
+    padding: 60px;
+    text-align: center;
+    text-decoration: none;
+    display: block;
+    font-size: 66px;
+    margin: 5px 2px;
+    cursor: help;
+}
+
+.button1 {padding: 10px 400px; background-color: #9D44B5;}
+.button2 {padding: 10px 400px; background-color: #355C7D;}
+.button3 {padding: 10px 400px; background-color: #EF476F;}
+.button4 {padding: 10px 400px; background-color: #FFD166;}
+.button5 {padding: 10px 400px; background-color: #06D6A0;}
+
+h1 {
+	font-family: Roboto;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 200;
+	line-height: 26.4px;
+}
+</style>
+</head>
+<body>
+
+<h2>Rounded Buttons</h2>
+
+<button class="button button1">A</button>
+<button class="button button2">B</button>
+<button class="button button3">C</button>
+<button class="button button4">D</button>
+<button class="button button5">E</button>
+
+
+</body>
+</html>
