--- a/templates/entercode.html
+++ b/templates/entercode.html
@@ -7,7 +7,7 @@
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="{{ url_for('static',filename='mainscript.js') }}" type="text/javascript"></script>
-<link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/style.css') }}">
+<link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/entercodestyle.css') }}">
 </head>
 
 <body>
@@ -19,10 +19,5 @@
         <input class="code" type="text" placeholder="Enter Code"></form>
         <button onclick="location.href = 'https://www.google.com';" type="button" class="submit">Submit</button>
     </div>
-    <!-- <div class="container">
-        <p><font face="Century Gothic">Proceed as</font></p>
-        <button onclick="location.href = 'https://www.google.com';" type="button" class="student">Student</button>
-        <button type="button" class="teacher">Teacher</button>
-    </div> -->
 </body>
 </html>
