--- a/static/styles/joinsession.css
+++ b/static/styles/joinsession.css
@@ -1,9 +1,3 @@
-.answer {
-    width: 50px;
-    height: 50px;
-    background-color: aliceblue;
-}
-
 body {
     background-color: #EBEBEB;
 }
@@ -25,7 +19,7 @@ body {
 p {
     text-align: center;
     font-size: 50px;
-    color: #7a7a7a;
+    color: #9e9d9d;
     margin: 5px 20px 35px 20px;
 }
 
@@ -42,15 +36,25 @@ button {
     border-radius: 12px;
 }
 
-.student {
-    background-color: #355c7d;
-    
+button:hover {
+    opacity: 0.8;
+}
+
+input {
+     font-family: "Century Gothic";
+     font-size: 55px;
+     text-align: center;
+     color: #7a7a7a;
+     padding: 14px 20px;
+     border: none;
+     width: 27%;  
+     display: block;    
+     margin: 10px auto 10px auto;
+     border: 2px solid #7a7a7a;
+     border-radius: 12px;
+     background-color: #EBEBEB;
  }
 
- .teacher {
-    background-color: #EF476F;
- }
-
- button:hover {
-     opacity: 0.8;
+ .submit {
+    background-color: #355c7d;    
  }
